test_files/netlist_connected/valid/valid_08.net
V1 drain 0 12
V2 gate 0 5
R1 drain source 100
M1 drain gate source 0 IRFZ44N
R2 source 0 10
.tran 1m
.backanno
.end
